--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ django-two-factor-auth==1.17.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 phonenumbers==9.0.2
+pillow==11.1.0
 PyJWT==2.9.0
 pypng==0.20220715.0
 qrcode==7.4.2
